<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBodyStart"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerEnd"
        app:layout_constraintStart_toEndOf="@+id/TitleNameTv"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop" />

    <TextView
        android:id="@+id/bodyTv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:scrollbars="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBodyEnd"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerEnd"
        app:layout_constraintStart_toEndOf="@+id/bodyNameTv"
        app:layout_constraintTop_toTopOf="@+id/guidelineBodyStart"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/TitleNameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBodyStart"
        android:text="@string/detail_view_name_title"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerBase"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerBase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.93" />

    <TextView
        android:id="@+id/bodyNameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_view_name_body"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBodyEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerBase"
        app:layout_constraintTop_toTopOf="@+id/guidelineBodyStart"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBodyStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.13" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBodyEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineUserNameEnd"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerImage"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerBase"
        app:layout_constraintTop_toTopOf="@+id/guidelineBodyEnd"
        app:srcCompat="@drawable/objectbox_stop" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineUserNameEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/userNameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/detail_view_user_name"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorCenter"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerImage"
        app:layout_constraintTop_toTopOf="@+id/guidelineBodyEnd"
        app:layout_constraintVertical_bias="0.75" />

    <TextView
        android:id="@+id/userNameDataTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorCenter"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerEnd"
        app:layout_constraintStart_toEndOf="@+id/userNameTv"
        app:layout_constraintTop_toTopOf="@+id/guidelineBodyEnd"
        app:layout_constraintVertical_bias="0.75" />

    <TextView
        android:id="@+id/commentCountNameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/detail_view_comment_count"
        app:layout_constraintBottom_toTopOf="@+id/guidelineUserNameEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerImage"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorCenter"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/commentCountTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineUserNameEnd"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerEnd"
        app:layout_constraintStart_toEndOf="@+id/commentCountNameTv"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorCenter"
        app:layout_constraintVertical_bias="0.25" />

</androidx.constraintlayout.widget.ConstraintLayout>